--- a/quetzalcoatl_software/config/move_base_sim/global_costmap_params.yaml
+++ b/quetzalcoatl_software/config/move_base_sim/global_costmap_params.yaml
@@ -13,7 +13,8 @@ global_costmap:
   origin_y: -50.0
 
   plugins:
-    # - {name: static_layer, type: "costmap_2d::StaticLayer"}
+    - {name: static_layer, type: "costmap_2d::StaticLayer"}
     # - {name: laser_obstacle_layer, type: "costmap_2d::ObstacleLayer"}
-    - {name: depth_obstacle_layer, type: "costmap_2d::VoxelLayer"}
-    # - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+    # - {name: left_depth_obstacle_layer, type: "costmap_2d::VoxelLayer"}
+    # - {name: right_depth_obstacle_layer, type: "costmap_2d::VoxelLayer"}
+    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
