--- a/quetzalcoatl_software/config/move_base_sim/local_costmap_params.yaml
+++ b/quetzalcoatl_software/config/move_base_sim/local_costmap_params.yaml
@@ -13,8 +13,12 @@ local_costmap:
   plugins:
     # - {name: static_layer, type: "costmap_2d::StaticLayer"}      
     # - {name: laser_obstacle_layer, type: "costmap_2d::ObstacleLayer"}
-    - {name: depth_obstacle_layer, type: "costmap_2d::VoxelLayer"}
+    # - {name: depth_obstacle_layer, type: "costmap_2d::VoxelLayer"}
     # - {name: head_stereo_obstacle_layer, type: "costmap_2d::VoxelLayer"}
     - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
     # - {name: rs_st_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
     # - {name: back_cam_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
+    - {name: elp_obstacle_layer, type: "costmap_2d::VoxelLayer"}
+    - {name: left_depth_obstacle_layer, type: "costmap_2d::VoxelLayer"}
+    - {name: right_depth_obstacle_layer, type: "costmap_2d::VoxelLayer"}
+
