--- a/quetzalcoatl_software/config/move_base_vo/local_costmap_params.yaml
+++ b/quetzalcoatl_software/config/move_base_vo/local_costmap_params.yaml
@@ -17,8 +17,8 @@ local_costmap:
     # - {name: laser_obstacle_layer, type: "costmap_2d::ObstacleLayer"}
     # - {name: depth_obstacle_layer, type: "costmap_2d::VoxelLayer"}
     # - {name: lidar_obstacle_layer, type: "costmap_2d::VoxelLayer"}
-    # - {name: rs_st_left_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
-    # - {name: rs_st_right_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
-    - {name: lidar_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
+    - {name: rs_st_left_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
+    - {name: rs_st_right_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
+    # - {name: lidar_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
     - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
-    # - {name: back_cam_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
+    - {name: back_cam_obstacle_layer, type: "spatio_temporal_voxel_layer/SpatioTemporalVoxelLayer"}
