--- a/quetzalcoatl_software/config/ekf/ekf_map.yaml
+++ b/quetzalcoatl_software/config/ekf/ekf_map.yaml
@@ -12,7 +12,7 @@ base_link_frame: base_footprint
 world_frame: map
 
 # Complete the odom0 configuration
-odom0: /tigra/wheel_odom
+odom0: /quetzalcoatl/wheel_odom
 odom0_config: 
   [true, true, false,
   false, false, true,
@@ -25,7 +25,7 @@ odom0_differential: false
 odom0_relative: false
 
 # Complete the imu0 configuration
-imu0: /tigra/imu
+imu0: /quetzalcoatl/imu
 imu0_config:
    [false, false, false,
    false,  false,  true,
@@ -37,7 +37,7 @@ imu0_nodelay: true
 imu0_differential: false
 imu0_relative: false
 
-odom1: /tigra/nav/gps
+odom1: /quetzalcoatl/nav/gps
 odom1_config: 
   [true,  true,  false,
    false, false, false,
