--- a/quetzalcoatl_maps/CMakeLists.txt
+++ b/quetzalcoatl_maps/CMakeLists.txt
@@ -5,4 +5,7 @@ find_package(catkin REQUIRED)
 
 catkin_package()
 
-include_directories()
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS}
+)
