--- a/quetzalcoatl_software/package.xml
+++ b/quetzalcoatl_software/package.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0"?>
 <package format="2">
+
   <name>quetzalcoatl_software</name>
   <version>0.0.0</version>
   <description>The quetzalcoatl_software package</description>
-
   <maintainer email="ashenone23@todo.todo">ashenone23</maintainer>
   <license>TODO</license>
+
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>roscpp</depend>
+  <depend>rospy</depend>
+  <build_depend>quetzalcoatl_msgs</build_depend>
 
-  <build_depend>message_generation</build_depend>
-  <exec_depend>message_runtime</exec_depend>
-
-  <export>
-
-  </export>
 </package>
