update build.sh; gitignore like in the tigra-proj

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,63 @@
+# Prerequisites
+*.d
 
-*.dep
-*.log
-*build
-*.vscode
-*.vscode/*
-**/.DS_Store
-**/__pycache__
-*.pyc
-/third_party/
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+*.bag
+**/*.bag
+
+**/.vscode
+
+venv*
+
+tekon.txt
+/dist
+/quetzalcoatl_maps/3d_maps/
+/third_party
